# Rock-Paper-Scissors

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: common.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp
test/: CMakeLists.txt
test/source/: rock_paper_scissors_test.cpp
